Gradle 7 RC-2, remove add-opens in compileJava